21 - Kubernetes: основы, применение и администрирование/Конфигурация приложений/files/ssl-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ssl-service
spec:
  selector:
    app: nginx-multitool
  ports:
    - protocol: TCP
      port: 443
      targetPort: 80
