21 - Kubernetes: основы, применение и администрирование/Конфигурация приложений/files/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  rules:
    - host: test.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ssl-service
                port:
                  number: 443
  tls:
    - hosts:
        - test.com
      secretName: nginx-tls-secret
